new notebooks added

--- a/Generative Deep Learning.ipynb
+++ b/Generative Deep Learning.ipynb
@@ -2,57 +2,60 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "subtle-stability",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
-   "id": "educational-future",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from tensorflow.keras import layers"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "basic-anchor",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "hundred-importance",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from tensorflow.keras.applications.inception_v3 import InceptionV3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "thousand-patch",
+   "id": "serial-monday",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<function tensorflow.python.keras.applications.inception_v3.InceptionV3(include_top=True, weights='imagenet', input_tensor=None, input_shape=None, pooling=None, classes=1000, classifier_activation='softmax')>"
+       "4.0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "InceptionV3"
+    "0.8/0.2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "necessary-conference",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.3276800000000001"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.exp(np.log(0.8)/0.2)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "confirmed-sullivan",
+   "id": "beneficial-seattle",
    "metadata": {},
    "outputs": [],
    "source": []
